--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,11 @@
     "bootstrap5": "^1.1.9",
     "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-router": "^6.6.1",
+    "react-router-dom": "^6.6.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
