--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "bootstrap5": "^1.1.9",
+    "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-jwt": "^1.1.7",
     "react-router": "^6.6.1",
     "react-router-dom": "^6.6.1",
     "react-scripts": "^5.0.1",
